# LLM-Inference-Engine

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: baseline_hf.py  load_test.py  quantization_report.py
mini_vllm/api/: protocol.py  server.py
mini_vllm/engine/: __init__.py  async_engine.py  llm_engine.py  output.py  scheduler.py  sequence.py
mini_vllm/kernels/: paged_attn_triton.py
mini_vllm/kv_cache/: __init__.py  block_manager.py  block_table.py  paged_attention.py
mini_vllm/model/: __init__.py  loader.py  paged_llama_runner.py  runner.py
mini_vllm/model/layers/: paged_attention.py
mini_vllm/quantization/: quantize.py  quantized_linear.py
mini_vllm/sampling/: __init__.py  sampler.py
notebooks/: kaggle_gpu_benchmarks.ipynb
tests/: conftest.py  test_api_server.py  test_block_manager.py  test_correctness.py  test_paged_attention.py  test_paged_llama_runner.py  test_quantization.py  test_scheduler.py
