[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-vllm"
version = "0.1.0"
description = "From-scratch LLM inference engine: continuous batching + paged KV-cache"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.12.0",
    "transformers>=4.45.0",
    "tokenizers>=0.20.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "accelerate>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
gpu = [
    "triton>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_vllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
